Preprocessing LIDC exp

--- a/experiments/lidc_exp/pylidc-experiments.ipynb
+++ b/experiments/lidc_exp/pylidc-experiments.ipynb
@@ -374,9 +374,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mdt1x",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mdt1x"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
