LIDC augmented (by GAN) datasets

--- a/experiments/lidc_exp/preprocessing.ipynb
+++ b/experiments/lidc_exp/preprocessing.ipynb
@@ -987,6 +987,248 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GAN generated scans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIDC-IDRI-0126-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0652-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0986-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0641-AUG 8 [0 1 2 3 4 5 6 7 8]\n",
+      "LIDC-IDRI-0980-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0743-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0577-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-0798-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0210-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0113-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0061-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-1008-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-0503-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0103-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0105-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0058-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0719-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0137-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0200-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0966-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0128-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0898-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0695-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0526-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-0344-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0864-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0249-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0906-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0998-AUG 10 [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "LIDC-IDRI-0747-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0276-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0801-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0951-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0321-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0108-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0527-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0303-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0763-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0768-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0626-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0149-AUG 8 [0 1 2 3 4 5 6 7 8]\n",
+      "LIDC-IDRI-0620-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0870-AUG 11 [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "LIDC-IDRI-0999-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0396-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0387-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0011-AUG 10 [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "LIDC-IDRI-0044-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0413-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0466-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0782-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0535-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-0181-AUG 8 [0 1 2 3 4 5 6 7 8]\n",
+      "LIDC-IDRI-0845-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0857-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0266-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0659-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0832-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0203-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0421-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0269-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0003-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0436-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0232-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0942-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0296-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0781-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0442-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0393-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0625-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0368-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-0865-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0037-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0686-AUG 21 [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21]\n",
+      "LIDC-IDRI-0770-AUG 12 [ 0  1  2  3  4  5  6  7  8  9 10 11 12]\n",
+      "LIDC-IDRI-0450-AUG 9 [0 1 2 3 4 5 6 7 8 9]\n",
+      "LIDC-IDRI-0973-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0566-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0915-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0007-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0207-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0088-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0059-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0654-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0196-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0861-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0312-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0347-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0317-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0916-AUG 9 [0 1 2 3 4 5 6 7 8 9]\n",
+      "LIDC-IDRI-0372-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0167-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0872-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0748-AUG 8 [0 1 2 3 4 5 6 7 8]\n",
+      "LIDC-IDRI-0359-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0332-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0136-AUG 9 [0 1 2 3 4 5 6 7 8 9]\n",
+      "LIDC-IDRI-0497-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0859-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0961-AUG 10 [ 0  1  2  3  4  5  6  7  8  9 10]\n",
+      "LIDC-IDRI-0640-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0515-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0151-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0101-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0305-AUG 8 [0 1 2 3 4 5 6 7 8]\n",
+      "LIDC-IDRI-0092-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0800-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0241-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0140-AUG 1 [0 1]\n",
+      "LIDC-IDRI-1000-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0217-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0378-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0974-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0582-AUG 9 [0 1 2 3 4 5 6 7 8 9]\n",
+      "LIDC-IDRI-0228-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0842-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0272-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0362-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0871-AUG 9 [0 1 2 3 4 5 6 7 8 9]\n",
+      "LIDC-IDRI-0601-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0325-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0195-AUG 7 [0 1 2 3 4 5 6 7]\n",
+      "LIDC-IDRI-0150-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0953-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0256-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0034-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0958-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0645-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0090-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0426-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0807-AUG 6 [0 1 2 3 4 5 6]\n",
+      "LIDC-IDRI-0339-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0557-AUG 2 [0 2]\n",
+      "LIDC-IDRI-0177-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0077-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0445-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0399-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0518-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0157-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0708-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0674-AUG 5 [0 1 2 3 4 5]\n",
+      "LIDC-IDRI-0481-AUG 7 [0 1 2 3 4 5 6 7]\n",
+      "LIDC-IDRI-1005-AUG 7 [0 1 2 3 4 5 6 7]\n",
+      "LIDC-IDRI-0855-AUG 16 [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
+      "LIDC-IDRI-0606-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0598-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0925-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0547-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0374-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0694-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0567-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0655-AUG 8 [0 1 2 3 4 5 6 7 8]\n",
+      "LIDC-IDRI-0932-AUG 1 [0 1]\n",
+      "LIDC-IDRI-0053-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0056-AUG 3 [0 1 2 3]\n",
+      "LIDC-IDRI-0484-AUG 2 [0 1 2]\n",
+      "LIDC-IDRI-0602-AUG 4 [0 1 2 3 4]\n",
+      "LIDC-IDRI-0315-AUG 7 [0 1 2 3 4 5 6 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2deed38c71bf4c1987ee4985aa2813c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Checkbox(value=False, description='flip'), Checkbox(value=False, description='crap'), Ch…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import os, glob\n",
+    "import numpy as np\n",
+    "import SimpleITK as sitk\n",
+    "import matplotlib.pyplot as plt\n",
+    "from ipywidgets import interact, interact_manual\n",
+    "from IPython.display import display\n",
+    "import matplotlib.pyplot as plt\n",
+    "import ipywidgets as widgets\n",
+    "list_path = glob.glob(\"/wmlce/data/medical-datasets/MDT-PP/*-AUG_img.npy\")\n",
+    "\n",
+    "for path in list_path:\n",
+    "    pid = os.path.basename(path).replace(\"_img.npy\", \"\")\n",
+    "    n_nods = len(glob.glob(f\"/wmlce/data/medical-datasets/MDT-LIDC-IDRI/NRRDs/{pid}/*nod*\"))\n",
+    "    print(pid, n_nods, np.unique(np.load(path.replace(\"_img\", \"_rois\"))))\n",
+    "\n",
+    "import csv\n",
+    "#csv_path = 'scans_checkup.csv'\n",
+    "csv_path = 'pp_aug_scans_checkup.csv'\n",
+    "header = ['pid', 'flip', 'crap', 'poor', 'warn', 'note']\n",
+    "if not os.path.exists(csv_path):\n",
+    "    f = open(csv_path, 'w+')\n",
+    "    writer = csv.DictWriter(f, fieldnames=header)\n",
+    "    writer.writeheader()\n",
+    "    f.close()\n",
+    "\n",
+    "def f(flip, crap, poor, warn, note):\n",
+    "    global ix, list_path, csv_path, header\n",
+    "    if ix >= 1 and (flip or crap or poor or warn):\n",
+    "        #pid = os.path.splitext(os.path.basename(list_path[ix-1]))[0].split('_CT')[0]\n",
+    "        pid = os.path.splitext(os.path.basename(list_path[ix-1]))[0].split('_img')[0]\n",
+    "        print(f'Adding abnormal img {pid} to csv')\n",
+    "        f = open(csv_path, 'a')\n",
+    "        writer = csv.DictWriter(f, fieldnames=header)\n",
+    "        writer.writerow({header[0]: pid, header[1]: int(flip), header[2]: int(crap), header[3]: int(poor), header[4]: int(warn), header[5]: note})\n",
+    "        f.close()\n",
+    "    if ix >= 0 and ix < len(list_path):\n",
+    "        print(f'Showing img: {ix}: {list_path[ix]}')\n",
+    "        ## Show ITK\n",
+    "        #itkimage = sitk.ReadImage(list_path[ix])\n",
+    "        #numpyImage = sitk.GetArrayFromImage(itkimage)\n",
+    "        numpyImage = np.load(list_path[ix])\n",
+    "        plt.imshow(numpyImage[int(len(numpyImage)/2)].astype(np.uint8), cmap=plt.cm.gray)\n",
+    "        plt.show()\n",
+    "    elif ix >= 0:\n",
+    "        print('Done')\n",
+    "    ix = ix + 1\n",
+    "\n",
+    "_ = interact_manual(f, flip=False, crap=False, poor=False, warn=False, note='')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
